First pages in the game

--- a/game/index.html
+++ b/game/index.html
@@ -3,4 +3,7 @@ layout: default
 title: The game!
 ---
 
-Something awesome this way comes
+<p>You are bored!  What do you decide to do?</p>
+
+<p><a href=house.html>Go Into The Haunted House That Everyone Is Scared Of</a><p>
+<p><a href=mermaids.html>Meet Magical Mermaids</a></p>
