--- a/about/index.html
+++ b/about/index.html
@@ -3,4 +3,7 @@ layout: default
 title: About Lillian
 ---
 
-##Nothing here yet!
+I love dragons!
+
+<h1>A message for the reader!</h1>
+Most of the games here are not made by professionals or anything, so they may not be as fun as games on <a href=https://pbskids.org>pbskids.org</a>
