Try out a game layout

--- a/game/house.html
+++ b/game/house.html
@@ -7,9 +7,9 @@ title: The Haunted House
 
 <p>One sounds like <em>OOOOOOOOOOOOOOOOHHHHHHHHHHHH!</em>
 
-<p>The other sounds like crashing and clanging, like boxes falling and cans rattling</em>
+<p>The other sounds like crashing and clanging, like boxes falling and cans rattling</p>
 
-Which sound do you investigate?
+<p>Which sound do you investigate?</p>
 
 <p><a href=ghost.html>The creepy "OOOOOOOOOHHHHHH!"</a></p>
 <p><a href=zombie.html>The banging clanging</a></p>
