--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Lillian's "dot-com"
 </div><!-- /.blurb -->
 <div class="blurb">
 	<h1>About This Website</h1>
-	<p>Soon, I will make a "Choose Your Own Adventure" game <a href=game>here</a>. I am not a professional or anything, so it may not be as fun as games on <a href=https://pbskids.org>pbskids.org</a></p>
+	<p>Soon, I will make a "Choose Your Own Adventure" game <a href=/game>here</a>. I am not a professional or anything, so it may not be as fun as games on <a href=https://pbskids.org>pbskids.org</a></p>
 </div><!-- /.blurb -->
 <div class="blurb">
 	<h2> This website is under construction!</h2>
