--- a/game/template.html
+++ b/game/template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>The Haunted House</title>
+		<title>#todo:title</title>
 		<!-- link to game stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/game.css">
 	</head>
@@ -13,17 +13,12 @@
 		</ul>
 		</nav>
 		<div class="container">
-            <img src="_images/Haunted_House.jpg" alt="The Scary House">
-			<p>You walk to the haunted house, and hear some creepy sounds.</p>
+			<p>#todo:description</p>
+            
+            <p>#todo:choice</p>
 
-<p>One sounds like <em>OOOOOOOOOOOOOOOOHHHHHHHHHHHH!</em>
-
-<p>The other sounds like crashing and clanging, like boxes falling and cans rattling</p>
-
-<p>Which sound do you investigate?</p>
-
-<p><a href=ghost.html>The creepy "OOOOOOOOOHHHHHH!"</a></p>
-<p><a href=zombie.html>The banging clanging</a></p>
+            <p><a href=#todo:link1.html>#todo:choice1</a></p>
+            <p><a href=#todo:link2.html>#todo:choice2</a></p>
 
 		</div><!--/.container -->
 		<footer>
