Fix the image path

--- a/game/house.html
+++ b/game/house.html
@@ -13,7 +13,7 @@
 		</ul>
 		</nav>
 		<div class="container">
-            <img src="_images/Haunted_House.jpg" alt="The Scary House">
+            <img src="game/_images/Haunted_House.jpg" alt="The Scary House">
 			<p>You walk to the haunted house, and hear some creepy sounds.</p>
 
 <p>One sounds like <em>OOOOOOOOOOOOOOOOHHHHHHHHHHHH!</em>
