Add the torch file

--- a/game/house.html
+++ b/game/house.html
@@ -22,8 +22,8 @@
 
 <p>Which sound do you investigate?</p>
 
-<p><a href=ghost.html> <img src="game/_images/arrow.png" alt="Choice 1"> The creepy "OOOOOOOOOHHHHHH!"</a></p>
-<p><a href=zombie.html> <img src="_images/arrow.png" alt="Choice 2">The banging clanging</a></p>
+<p><a href=ghost.html> <img src="game/_images/arrow.png" alt="Choice 1:"> The creepy "OOOOOOOOOHHHHHH!"</a></p>
+<p><a href=zombie.html> <img src="_images/arrow.png" alt="Choice 2:"> The banging clanging</a></p>
 
 		</div><!--/.container -->
 		<footer>
