restore the jekyll type files

--- a/game/house.html
+++ b/game/house.html
@@ -1,20 +1,11 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>The Haunted House</title>
-		<!-- link to game stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/game.css">
-	</head>
-	<body>
-		<nav>
-		<ul>
-			<li><a href="/">Home</a></li>
-			<li><a href="/game">Start Over</a></li>
-		</ul>
-		</nav>
-		<div class="container">
-            <img src="game/_images/Haunted_House.jpg" alt="The Scary House">
-			<p>You walk to the haunted house, and hear some creepy sounds.</p>
+---
+layout: game
+title: The Haunted House
+---
+
+<img src="game/_images/Haunted_House.jpg" alt="The Scary House">
+
+<p>You walk to the haunted house, and hear some creepy sounds.</p>
 
 <p>One sounds like <em>OOOOOOOOOOOOOOOOHHHHHHHHHHHH!</em>
 
@@ -24,14 +15,3 @@
 
 <p><a href=ghost.html> <img src="game/_images/arrow.png" alt="Choice 1:"> The creepy "OOOOOOOOOHHHHHH!"</a></p>
 <p><a href=zombie.html> <img src="_images/arrow.png" alt="Choice 2:"> The banging clanging</a></p>
-
-		</div><!--/.container -->
-		<footer>
-		<ul>
-			<h3>Made By:</h3>
-			<li><a href="https://github.com/lillianrowley">Lillian Rowley</a></li>
-			<li><a href="https://github.com/mattbrowley">Matthew Rowley</a></li>
-		</ul>
-		</footer>
-	</body>
-</html>
