--- a/game/template.html
+++ b/game/template.html
@@ -1,32 +1,11 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>#todo:title</title>
-		<!-- link to game stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/game.css">
-	</head>
-	<body>
-		<nav>
-		<ul>
-			<li><a href="/">Home</a></li>
-			<li><a href="/game">Start Over</a></li>
-		</ul>
-		</nav>
-		<div class="container">
-			<p>#todo:description</p>
-            
-            <p>#todo:choice</p>
+---
+layout: game
+title: #todo:title
+---
 
-            <p><a href=#todo:link1.html><img src="game/_images/arrow.png" alt="Choice 1:"> #todo:choice1</a></p>
-            <p><a href=#todo:link2.html><img src="~/game/_images/arrow.png" alt="Choice 2:"> #todo:choice2</a></p>
+<p>#todo: content</p>
 
-		</div><!--/.container -->
-		<footer>
-		<ul>
-			<h3>Made By:</h3>
-			<li><a href="https://github.com/lillianrowley">Lillian Rowley</a></li>
-			<li><a href="https://github.com/mattbrowley">Matthew Rowley</a></li>
-		</ul>
-		</footer>
-	</body>
-</html>
+<p>#todo:question</p>
+
+<p><a href=#todo:link1><img src="game/_images/arrow.png" alt="Choice 1:">#todo:choice1</a></p>
+<p><a href=#todo:link2><img src="game/_images/arrow.png" alt="Choice 2:">#todo:choice2</a></p>
