add a few pages to the game

--- a/game/zombie.html
+++ b/game/zombie.html
@@ -3,4 +3,11 @@ layout: game
 title: Zombie
 ---
 
-#todo: Content
+<p>You see some rattling junk ahead. A zombie emerges from the junk and comes toward you!</p>
+
+<p>You look around for a weapon, but all you see is a torch on the wall. You are also wearing a shoe, I guess.</p>
+
+<p>What will you use for a weapon as you fight the zombie?</p>
+
+<p><a href=#todo:link1><img src="game/_images/arrow.png" alt="Choice 1:">Fight with the torch</a></p>
+<p><a href=#todo:link2><img src="game/_images/arrow.png" alt="Choice 2:">Fight with your shoe</a></p>
