actually get the images working now

--- a/game/castle.html
+++ b/game/castle.html
@@ -7,5 +7,5 @@ title: #todo:title
 
 <p>#todo:question</p>
 
-<p><a href=#todo:link1><img src="game/_images/arrow.png" alt="Choice 1:">#todo:choice1</a></p>
-<p><a href=#todo:link2><img src="game/_images/arrow.png" alt="Choice 2:">#todo:choice2</a></p>
+<p><a href=#todo:link1><img src="images/Arrow.jpg" height="20" alt="Choice 1:">#todo:choice1</a></p>
+<p><a href=#todo:link2><img src="images/Arrow.jpg" height="20" alt="Choice 2:">#todo:choice2</a></p>
