--- a/game/dolphin.html
+++ b/game/dolphin.html
@@ -11,5 +11,5 @@ title: Dolphin
 
 <p>Which way do you go?</p>
 
-<p><a href=castle.html><img src="game/_images/arrow.png" alt="Choice 1:">Into the castle</a></p>
-<p><a href=shimmers.html><img src="game/_images/arrow.png" alt="Choice 2:">Toward the shimmers</a></p>
+<p><a href=castle.html><img src="images/Arrow.jpg" height="20" alt="Choice 1:">Into the castle</a></p>
+<p><a href=shimmers.html><img src="images/Arrow.jpg" height="20" alt="Choice 2:">Toward the shimmers</a></p>
