--- a/game/mermaids.html
+++ b/game/mermaids.html
@@ -9,5 +9,5 @@ title: Magical Mermaids
 
 <p>Which one do you go to?</p>
 
-<p><a href=snorkeling.html>Swim out to the pink shimmering</a></p>
-<p><a href=dolphin.html>Swim out to meet the dolphin</a></p>
+<p><a href=snorkeling.html><img src="images/Arrow.jpg" height="20" alt="Choice 1:">Swim out to the pink shimmering</a></p>
+<p><a href=dolphin.html><img src="images/Arrow.jpg" height="20" alt="Choice 2:">Swim out to meet the dolphin</a></p>
