--- a/game/zombie.html
+++ b/game/zombie.html
@@ -9,5 +9,5 @@ title: Zombie
 
 <p>What will you use for a weapon as you fight the zombie?</p>
 
-<p><a href=#todo:link1><img src="game/_images/arrow.png" alt="Choice 1:">Fight with the torch</a></p>
-<p><a href=#todo:link2><img src="game/_images/arrow.png" alt="Choice 2:">Fight with your shoe</a></p>
+<p><a href=#todo:link1><img src="images/Arrow.jpg" height="20" alt="Choice 1:">Fight with the torch</a></p>
+<p><a href=#todo:link2><img src="images/Arrow.jpg" height="20" alt="Choice 2:">Fight with your shoe</a></p>
