--- a/game/ghost.html
+++ b/game/ghost.html
@@ -3,4 +3,9 @@ layout: game
 title: Ghost
 ---
 
-#todo: Content
+<p>#todo: content</p>
+
+<p>#todo:question</p>
+
+<p><a href=#todo:link1><img src="images/Arrow.jpg" height="20" alt="Choice 1:">#todo:choice1</a></p>
+<p><a href=#todo:link2><img src="images/Arrow.jpg" height="20" alt="Choice 2:">#todo:choice2</a></p>
