--- a/game/house.html
+++ b/game/house.html
@@ -3,7 +3,7 @@ layout: game
 title: The Haunted House
 ---
 
-<img src="game/_images/Haunted_House.jpg" alt="The Scary House">
+<img src="images/Haunted_House.jpg" alt="The Scary House" style="float:right">
 
 <p>You walk to the haunted house, and hear some creepy sounds.</p>
 
@@ -13,5 +13,5 @@ title: The Haunted House
 
 <p>Which sound do you investigate?</p>
 
-<p><a href=ghost.html> <img src="game/_images/arrow.png" alt="Choice 1:"> The creepy "OOOOOOOOOHHHHHH!"</a></p>
-<p><a href=zombie.html> <img src="_images/arrow.png" alt="Choice 2:"> The banging clanging</a></p>
+<p><a href=ghost.html> <img src="images/Arrow.jpg" height="20" alt="Choice 1:"> The creepy "OOOOOOOOOHHHHHH!"</a></p>
+<p><a href=zombie.html> <img src="images/Arrow.jpg" height="20" alt="Choice 2:"> The banging clanging</a></p>
