implement back button in game

--- a/game/dolphin.html
+++ b/game/dolphin.html
@@ -1,6 +1,7 @@
 ---
 layout: game
 title: Dolphin
+back: /game/mermaids.html
 ---
 
 <p>The dolphin chirps at you a couple of times, then goes under the water.</p>
