--- a/game/house.html
+++ b/game/house.html
@@ -1,6 +1,7 @@
 ---
 layout: game
 title: The Haunted House
+back: /game
 ---
 
 <img src="images/Haunted_House.jpg" alt="The Scary House" style="float:right">
