--- a/game/mermaids.html
+++ b/game/mermaids.html
@@ -1,6 +1,7 @@
 ---
 layout: game
 title: Magical Mermaids
+back: /game
 ---
 
 <p>You were having fun at the beach, swimming, and you see a pink shimmering glint in the water</p>
