--- a/game/shimmers.html
+++ b/game/shimmers.html
@@ -1,9 +1,10 @@
 ---
 layout: game
 title: #todo:title
+back: /game/dolphin.html
 ---
 
-<p>#todo: content</p>
+<p>#todo:content</p>
 
 <p>#todo:question</p>
 
