--- a/game/zombie.html
+++ b/game/zombie.html
@@ -1,6 +1,7 @@
 ---
 layout: game
 title: Zombie
+back: /game/house
 ---
 
 <p>You see some rattling junk ahead. A zombie emerges from the junk and comes toward you!</p>
@@ -9,5 +10,5 @@ title: Zombie
 
 <p>What will you use for a weapon as you fight the zombie?</p>
 
-<p><a href=#todo:link1><img src="images/Arrow.jpg" height="20" alt="Choice 1:">Fight with the torch</a></p>
-<p><a href=#todo:link2><img src="images/Arrow.jpg" height="20" alt="Choice 2:">Fight with your shoe</a></p>
+<p><a href=torch.html><img src="images/Arrow.jpg" height="20" alt="Choice 1:">Fight with the torch</a></p>
+<p><a href=shoe.html><img src="images/Arrow.jpg" height="20" alt="Choice 2:">Fight with your shoe</a></p>
